<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- TODO: Add data binding node -->
    <data>
        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.representative.RepresentativeViewModel" />
    </data>

    <!-- TODO: Add motion scene to hide form on vertical scroll. -->
    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        app:layoutDescription="@xml/fragment_representative_screen">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/search_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent">

            <!-- TODO: Add visual styling and content -->
            <TextView
                android:id="@+id/search_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:textColor="@color/gray900"
                android:text="@string/representative_search"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginBottom="@dimen/default_padding"/>

            <!-- TODO: Add data binding value -->
            <!-- TODO: Add visual styling and content -->
            <EditText
                android:id="@+id/address_line_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/address_line_1"
                android:inputType="textPostalAddress"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_title"
                android:text="@{viewModel.address.line1}"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginBottom="@dimen/default_padding"/>

            <!-- TODO: Add data binding value -->
            <!-- TODO: Add visual styling and content -->
            <EditText
                android:id="@+id/address_line_2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:autofillHints=""
                android:hint="@string/address_line_2"
                android:inputType="textPostalAddress"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/address_line_1"
                android:text="@{viewModel.address.line2}"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginBottom="@dimen/default_padding" />

            <!-- TODO: Add data binding value -->
            <!-- TODO: Add visual styling and content -->
            <EditText
                android:id="@+id/city"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/city"
                android:inputType="textPostalAddress"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/state"
                app:layout_constraintTop_toBottomOf="@id/address_line_2"
                android:text="@{viewModel.address.city}"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginBottom="@dimen/default_padding" />

            <!-- TODO: Add default values from provided resources  -->
            <!-- TODO: Add data binding value -->
            <!-- TODO: Add visual styling and content -->
            <Spinner
                android:id="@+id/state"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:autofillHints=""
                android:entries="@array/states"
                android:inputType="textPostalAddress"
                app:layout_constraintStart_toEndOf="@id/city"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/city"
                app:layout_constraintBottom_toBottomOf="@id/city"
                app:stateValue="@{viewModel.address.state}"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginBottom="@dimen/default_padding" />

            <!-- TODO: Add data binding value -->
            <!-- TODO: Add visual styling and content -->
            <EditText
                android:id="@+id/zip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:inputType="number"
                android:maxLength="5"
                android:hint="@string/zip"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="@id/city"
                app:layout_constraintTop_toBottomOf="@id/city"
                android:text="@{viewModel.address.zip}"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginBottom="@dimen/default_padding"/>

            <!-- TODO: Add visual styling and label -->
            <Button
                android:id="@+id/button_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/find_my_representatives"
                app:layout_constraintTop_toBottomOf="@id/zip"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginBottom="@dimen/default_padding"/>

            <!-- TODO: Add visual styling and content -->
            <Button
                android:id="@+id/button_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/button_search"
                android:text="@string/use_my_location"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginBottom="@dimen/default_padding"/>

            <!-- TODO: Add visual styling and content -->
            <TextView
                android:id="@+id/representative_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button_location"
                android:text="@string/representative"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textColor="@color/gray600"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginBottom="@dimen/default_padding"/>

            <!-- TODO: Add Representatives RecyclerView -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/representatives"
                tools:listitem="@layout/viewholder_election"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/representative_title"
                android:layout_marginTop="@dimen/default_padding" />

            <!-- TODO: Add visual styling and content -->
            <TextView
                android:id="@+id/list_placeholder"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:textAlignment="center"
                android:visibility="gone"
                app:visibilityMode="ignore"
                app:layout_constraintTop_toBottomOf="@id/representative_title"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.motion.widget.MotionLayout>

</layout>