<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- TODO: Add data binding node for Voter Info ViewModel -->
    <data>
        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.election.VoterInfoViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <!-- TODO: Add title to toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/election_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            android:singleLine="true"
            tools:title="VIP Test Election"
            app:title="@{viewModel.election.name}"
            app:titleTextColor="@color/white"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- TODO: Add visual styling -->
        <TextView
            android:id="@+id/election_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@id/election_name"
            android:text="@{viewModel.electionDay}"
            tools:text="Tue Apr 07 00:00:00 EDT 2020"
            style="@style/CaptionText"/>

        <!-- TODO: Add visual styling and content -->
        <TextView
            android:id="@+id/state_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/election_information"
            style="@style/TitleText"
            android:layout_marginTop="@dimen/default_margin"
            android:onClick="@{() -> viewModel.onElectionInfoClicked()}"
            app:layout_constraintTop_toBottomOf="@id/election_date"
            app:layout_constraintStart_toStartOf="@id/election_date" />

        <!-- TODO: Add click binding to open web URL -->
        <!-- TODO: Add visual styling and content -->
        <TextView
            android:id="@+id/state_locations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/state_header"
            app:layout_constraintStart_toStartOf="@id/election_date"
            style="@style/CaptionText"
            android:drawableStart="@drawable/ic_baseline_location_on_24"
            android:gravity="center_vertical"
            android:drawablePadding="@dimen/icon_padding"
            android:drawableTint="@color/gray600"
            android:layout_marginTop="@dimen/default_padding"
            android:text="@string/voting_locations"
            android:onClick="@{() -> viewModel.onVotingLocationClicked()}"/>

        <!-- TODO: Add click binding to open web URL -->
        <!-- TODO: Add visual styling and content -->
        <TextView
            android:id="@+id/state_ballot"
            style="@style/CaptionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_info_24"
            android:drawablePadding="@dimen/icon_padding"
            android:drawableTint="@color/gray600"
            android:layout_marginStart="@dimen/default_margin"
            android:gravity="center_vertical"
            android:onClick="@{() -> viewModel.onBallotInfoClicked()}"
            android:text="@string/ballot_information"
            app:layout_constraintStart_toEndOf="@+id/state_locations"
            app:layout_constraintTop_toTopOf="@+id/state_locations" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/address_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="state_correspondence_header,address" />

        <!-- TODO: Add visual styling and content -->
        <TextView
            android:id="@+id/state_correspondence_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/state_ballot"
            app:layout_constraintStart_toStartOf="@id/election_date" />

        <!-- TODO: Add data binding -->
        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/state_correspondence_header"
            app:layout_constraintStart_toStartOf="@id/election_date" />

        <!-- TODO: Add button to save election to Room -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/follow_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/follow_election"
            style="@style/ColoredButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:onClick="@{() -> viewModel.onFollowButtonClicked()}"
            android:layout_margin="@dimen/default_margin"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>